updated the UI and fixed and added follow up message feature